# g3log_issue

./: CMakeLists.txt  README.md
app/: app.cpp
lib/: lib.cpp  lib.h
